fix issue where content underneath the prompt could be visible

--- a/gui/components/chat/ChatWindow/styles.module.css
+++ b/gui/components/chat/ChatWindow/styles.module.css
@@ -16,8 +16,10 @@
   width: 100%;
   max-width: 790px;
   background-color: white;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
+  padding-bottom: 20px;
   box-shadow: 0px 0px 20px white;
   padding-top: 10px;
   border-top: 3px solid lightgrey;
+  z-index: 1001;
 }
